ghc-4335c07/testsuite/tests/typecheck/should_fail/T13446.stderr

T13446.hs:34:17: error:
    • Couldn't match expected type ‘Dict (JReference (JComparable a))’
                  with actual type ‘Char’
    • In the first argument of ‘Sub’, namely ‘'a'’
      In the expression: Sub 'a'
      In an equation for ‘lifting’: lifting = Sub 'a'
    • Relevant bindings include
        lifting :: JReference a :- JReference (JComparable a)
          (bound at T13446.hs:34:3)
